# nwut

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
nwut/: __init__.py  _base.py  errors.py
nwut/clients/: gemini.py
tests/: conftest.py
tests/clients/: test_gemini.py  test_gemini_integration.py
