[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nwut"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "google-generativeai>=0.8",
    "tenacity>=8",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-mock", "ruff"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
